load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Explicitly included until we switch to modules, otherwise we include 0.7 by default.
http_archive(
    name = "rules_license",
    strip_prefix = "rules_license-f85e7d6309f28f031bf049f7d6283ce0d41d7546",
    urls = [
        "https://github.com/bazelbuild/rules_license/archive/f85e7d6309f28f031bf049f7d6283ce0d41d7546.zip",
    ],
    sha256 = "86b1af9cacfb69db81ac4c258366492bedcbb69cc9476c904134bc4df5bad294"
)

# Private Join and Compute
http_archive(
    name = "private_join_and_compute",
    strip_prefix = "private-join-and-compute-c0cb3f5b5b616caaaef80b7f7e9c335f4fe53ce7",
    sha256 = "7e3ae87291b0bee9b31d579862bf6e9e9630d837bed45cd8651d94498a565925",
    urls = [
        "https://github.com/google/private-join-and-compute/archive/c0cb3f5b5b616caaaef80b7f7e9c335f4fe53ce7.zip",
    ],
)

load("@private_join_and_compute//bazel:pjc_deps.bzl", "pjc_deps")
pjc_deps()

# gRPC
# must be included separately, since we need to load transitive deps of grpc.
http_archive(
    name = "com_github_grpc_grpc",
    strip_prefix = "grpc-1.68.0",
    integrity = "sha256-hvDyi3WxViyCt/xdQ2tPX12my41n9Z6f7F+Kof6SQDc=",
    urls = [
        "https://github.com/grpc/grpc/archive/v1.68.0.tar.gz",
    ],
)

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")
grpc_extra_deps()
